Add sleep function to counter asynchronocity

--- a/christoffel-symbols-calculator.ipynb
+++ b/christoffel-symbols-calculator.ipynb
@@ -203,6 +203,7 @@
     "            metric_component = sp.Symbol(f\"\\tg_{sp.latex(x[i])}_{sp.latex(x[j])}\")\n",
     "            display(metric_component)\n",
     "            g[i,j] = metric_component\n",
+    "            sleep(0.5) # counter asynchronocity between display and input function calls.\n",
     "            covariant_metric[i,j] = input(\"\")\n",
     "            if i!=j:\n",
     "                g[j,i] = g[i,j]\n",
